[package]
name = "gsm_cap"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "CAMEL Application Part (CAP) codec (3GPP TS 29.078) — BER encode/decode of the gsmSSF-gsmSCF operations + application contexts"
authors = ["Real Time Telecom B.V."]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Real-Time-Telecom-B-V/gsm_cap"
homepage = "https://github.com/Real-Time-Telecom-B-V/gsm_cap"
keywords = ["camel", "cap", "ss7", "3gpp", "telecom"]
categories = ["network-programming", "encoding"]
exclude = [".github/", "docs/"]

[dependencies]
rasn = "0.28"
thiserror = "2"

[dev-dependencies]
hex = "0.4"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
